testsuite/tests/grammar/invalid_field_type/test.out
== foo.lkt ==
foo.lkt:17:18: error: AST node parse fields must all be AST node themselves. Here, field type is Character
17 |     @parse_field f: Char
   |                  ^^^^^^^


lkt_compile: Done
